--- a/static/bot.html
+++ b/static/bot.html
@@ -128,9 +128,10 @@
 			font-size: 12pt;
 			line-height: 15pt;
 			margin: 1pt 0;
-			max-width: 90%;
+			max-width: 95%;
 			padding: 6pt 9pt;
 			font-size:13px;
+			text-align: left;
 		}
 		.header
 		{
