--- a/static/bot - Copy.html
+++ b/static/bot - Copy.html
@@ -40,8 +40,8 @@
 		{
 			overflow:scroll;
 			overflow-x: hidden;
-			width:100%;
-			height:100%;
+			width:360px;
+			height:390px;
 			border-bottom: 1px solid black;
 			border-bottom-color:rgb(189, 199, 216);
 			border-top: 1px solid black;
@@ -51,8 +51,8 @@
 		}
 		#agent
 		{
-			width:100%;
-			height:100%;
+			width:365px;
+			height:510px;
 			border: 1px solid #FFF;
 			border-color:rgb(189, 199, 216);
 			border-radius: 15px;
@@ -66,12 +66,12 @@
 		}
 		#header
 		{
-			width:100%;
+			width:360px;
 			height:50px;
 		}
 		#inp,#m
 		{
-			width:100%;
+			width:330px;
 			height:50px;
 			
 		}
@@ -150,7 +150,7 @@
 			
 			color:#1d2129;
 			
-			padding-right:45%;
+			padding-right:105px;
 		}
 		.min-button
 		{
@@ -189,7 +189,7 @@
   </head>
   <body>
   <center>
-	
+	<br><br><br>
 	<div id="main">
 		<div id="agent">
 			<div id="header" class="header" onclick="minimizechat()">	
@@ -199,7 +199,7 @@
 					</div>
 				</div>
 				<div class="bot-title">
-					InfoBot
+					Infocruise Chat Bot
 				</div>
 			</div>
 			<div id="win">
