--- a/static/bot.html
+++ b/static/bot.html
@@ -11,7 +11,7 @@
       </script>
 			
 	<style>
-		body{font-family: 'Roboto', sans-serif;}
+		body{font-family: 'Roboto', sans-serif;font-size:1.5em;}
 		#messages { list-style-type: none; margin: 0; padding: 0; }
 		#messages li.customer-error { color: red; }
 		input:focus{outline: none;}        
@@ -108,12 +108,10 @@
 			float: right;
 			clear: both;
 			display: block;
-			font-size: 12pt;
 			line-height: 15pt;
 			margin: 1pt 0;
 			max-width: 90%;
 			padding: 6pt 9pt;
-			font-size:13px;
 
 		}
 		.botmsg
@@ -126,12 +124,11 @@
 			float: left;
 			clear: both;
 			display: block;
-			font-size: 12pt;
+			
 			line-height: 15pt;
 			margin: 1pt 0;
 			max-width: 95%;
 			padding: 6pt 9pt;
-			font-size:13px;
 			text-align: left;
 		}
 		.header
