--- a/static/bot.html
+++ b/static/bot.html
@@ -18,8 +18,7 @@
 		body
 		{
 			background-repeat:no-repeat;
-			padding:0;
-			margin:0;
+			
 		}
 		#win::-webkit-scrollbar-track
 		{
@@ -73,7 +72,7 @@
 		#inp,#m
 		{
 			width:99%;
-			height:50px;
+			height:30%;
 			
 		}
 		.text
@@ -95,7 +94,7 @@
 			color: #000;
 			float:left;
 			z-index:100000;
-			font-size:15px;
+			font-size:1.5em;
 		}
 		.custmsg
 		{
