--- a/static/bot.html
+++ b/static/bot.html
@@ -200,7 +200,7 @@
 					</div>
 				</div>
 				<div class="bot-title">
-					Infocruise Chat Bot
+					InfoBot
 				</div>
 			</div>
 			<div id="win">
