--- a/static/bot.html
+++ b/static/bot.html
@@ -151,7 +151,7 @@
 			
 			color:#1d2129;
 			
-			padding-right:105px;
+			padding-right:45%;
 		}
 		.min-button
 		{
@@ -190,7 +190,7 @@
   </head>
   <body>
   <center>
-	
+	<br><br><br><br>
 	<div id="main">
 		<div id="agent">
 			<div id="header" class="header" onclick="minimizechat()">	
