--- a/static/bot1.html
+++ b/static/bot1.html
@@ -88,6 +88,7 @@
 		}        
 		input
 		{
+			font-family: 'Nanum Pen Script', cursive;
 			background-color: #fff;
 			border: 0px solid;
 			height: 50px;;
@@ -115,6 +116,7 @@
 			padding: 6pt 9pt;
 			font-size:13px;
 			text-align: left;
+			font-family: 'Nanum Pen Script', cursive;
 
 		}
 		.botmsg
@@ -134,6 +136,7 @@
 			padding: 6pt 9pt;
 			font-size:13px;
 			text-align: left;
+			font-family: 'Nanum Pen Script', cursive;
 		}
 		.header
 		{
