--- a/static/bot-m.html
+++ b/static/bot-m.html
@@ -74,7 +74,7 @@
 			width:100%;
 			height:100px;
 			color:white;
-			background-color:#3b5998;
+			background-color:#b6d17a;
 			position: fixed;
 			font-family: 'Indie Flower', cursive;
 		}
@@ -93,7 +93,7 @@
 		{
 
 			padding-top:5px;
-			background-color: rgb(0, 132, 255);
+			background-color: #b6d17a;
 			border-bottom-left-radius: 1.3em;
 			border-top-left-radius: 1.3em;
 			color: #fff;
@@ -105,7 +105,7 @@
 			min-width:15%;
 			max-width: 95%;
 			padding: 6pt 9pt;
-			font-size:1.7em;
+			font-size:2em;
 			font-family: 'Nanum Pen Script', cursive;
 
 		}
@@ -119,7 +119,7 @@
 			float: left;
 			clear: both;
 			display: block;
-			font-size:1.7em;
+			font-size:2em;
 			line-height: 35pt;
 			margin: 1pt 0;
 			min-width:15%;
@@ -144,7 +144,7 @@
 		{
 			
 			color:white;
-			font-size:2em;
+			font-size:2.5em;
 			padding-left:40%;
 		}
 		.min-button
@@ -228,7 +228,7 @@
 		input
 		{
 			border:0;
-			font-size: 1em;
+			font-size: 1.5em;
 			font-family: 'Nanum Pen Script', cursive;
 		}
 		.version_num
@@ -265,29 +265,12 @@
 				</form>
 			</div>
 		</div>
-		<div id="messenger-img" onclick="maximizechat()">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Facebook_Messenger_logo.svg/2000px-Facebook_Messenger_logo.svg.png">
-		</div>
+		
 	</div>
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
-	document.getElementById("messenger-img").style.display="none";
-	document.getElementById("agent").style.display="none";
-	maximizechat();
-	function minimizechat()
-	{
-		document.getElementById("agent").style.display="none";
-		document.getElementById("messenger-img").style.display="block";
-	}
-	function maximizechat()
-	{
-		$( "#messenger-img" ).toggle( "bounce", { times: 4 }, "slow" );
-		setTimeout( function(){ 
-			document.getElementById("agent").style.display="block";
-			document.getElementById("messenger-img").style.display="none";
-  }  , 2000 );
-	}
+	
       $(function () {
         var socket = io('/customer');
         $('form').submit(function(){
@@ -305,7 +288,7 @@
         socket.on('customer message', function(msg){
           $('#messages').append("<li class='text-l'><span class='botmsg'>"+msg+"</span></li>");	
 		 $('html, body').animate({
-    scrollTop: $('#win').height()
+			scrollTop: $('#win').height()
   });
 		  
 		var objDiv = document.getElementById("win");
@@ -330,7 +313,7 @@
 	$('#m').css('width', windowWidth-minval);
 	$('#bot_footer').css('width', windowWidth);
 	$('#win').css('min-height', windowHeight-minval);
-	minval=(windowWidth*15)/100;
+	minval=(windowWidth*9)/100;
 	$('#win').css('margin-bottom',minval);
   };
   setHeight();
