--- a/static/bot1.html
+++ b/static/bot1.html
@@ -236,6 +236,16 @@
 		</div>
 		
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62413788-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-62413788-3');
+</script>
+
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
