--- a/static/bot-m.html
+++ b/static/bot-m.html
@@ -11,6 +11,7 @@
 	<script type = "text/javascript" 
          src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
       </script>
+	  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 			
 	<style>
 		body{font-family: 'Roboto', sans-serif; font-size:1.5em;}
@@ -106,7 +107,7 @@
 			max-width: 95%;
 			padding: 6pt 9pt;
 			font-size:2em;
-			font-family: 'Nanum Pen Script', cursive;
+			font-family: 'Montserrat', sans-serif;
 
 		}
 		.botmsg
@@ -126,7 +127,7 @@
 			max-width: 95%;
 			padding: 6pt 9pt;
 			text-align: left;
-			font-family: 'Nanum Pen Script', cursive;
+			font-family: 'Montserrat', sans-serif;
 		}
 		.header
 		{
